test/bad/classic0.qp
-- Classical errors.
let omega x = x x ;;

